# learning-games-for-kids

./: angular.json  manage.py  package-lock.json  package.json  pyproject.toml
django_settings/: settings.py
learning_games_for_kids_host/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/accounts/: serializers.py  urls.py  views.py
src/backend/accounts/views/: auth.py
src/backend/core/: models.py
src/backend/organization/: admin.py  urls.py
src/backend/organization/controllers/: __init__.py  membership_viewset.py  organization_viewset.py
src/backend/organization/models/: __init__.py  academic_classes.py  membership.py  organization.py  role.py
src/backend/organization/serializers/: __init__.py  academic_classes_serializer.py  membership_serializer.py  organization_membership_serializer.py  organization_serializer.py  role_serializer.py
src/backend/organization/views/: __init__.py  academic_classes_viewset.py  membership_viewset.py  organization_viewset.py
src/backend/words_soup_game/: admin.py  urls.py
src/backend/words_soup_game/models/: __init__.py  exercise.py  exercise_record.py  exercise_schedule.py  word.py
src/backend/words_soup_game/serializers/: __init__.py  exercise_record_serializer.py  exercise_schedule_serializer.py  exercise_serializer.py  word_serializer.py
src/backend/words_soup_game/views/: __init__.py  exercise_record_viewset.py  exercise_viewset.py  (+2 more)
src/frontend/: index.html  styles.css
src/frontend/app/: app.component.ts  app.config.ts  app.routes.ts
src/frontend/environments/: environment.prod.ts  environment.ts
(+111 files in other folders)
